tests/fixtures/positive/code-style/ProhibitSuppressWarnings_MethodNamesWithSuppressText.cls
// Valid: Method name or variable name containing suppression-related text
public class Example7 {
    public void suppressWarningsMethod() {
        int nopmdVariable = 42;
        System.debug(nopmdVariable);
    }
}

