tests/fixtures/negative/code-style/ProhibitSuppressWarnings_NOPMD_MixedCase.cls
// Violation: NOPMD comment (mixed case)
public class Example7 {
    public void method() {
        int unused = 42; // NoPmD
    }
}

